# quant-agent-lab

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml
configs/: cost.toml  data.toml  llm.toml  risk.toml  strategy.toml  universe.toml
docs/: agent_handoff_current_status.md  agent_memory_full.md  architecture.md  codex_handoff_2026-04-13.md  git_workflow.md  handoff_2026-04-14_zh.md  llm_architecture_plan.md  multi_agent_evolution_runbook.md  mvp_acceptance.md  project_instructions_agent_llm.md  project_instructions_master.md  project_instructions_report_validation.md  project_instructions_strategy_universe.md  strategy_research_brief.md  system_manual_2026-04-14_zh.md  ubuntu_runbook.md  交接文档.md  操作说明书.md
docs/completion_reports/: 2026-04-14_0019_completion_report_convention.md  README.md  (+4 more)
scripts/: daily_pipeline.py  data_sync_akshare.py  data_sync_smoke.py  git_snapshot_sync.py  paper_run_smoke.py  report_gen_smoke.py  run_agent_loop_from_data.py  run_agent_loop_smoke.py  run_backtest_smoke.py  strategy_research_run.py
tests/: test_a_share_rules.py  test_agent_loop.py  test_akshare_adapter.py  test_backtest_smoke.py  test_config_universe.py  test_daily_pipeline.py  test_data_manager.py  test_data_quality.py  test_git_snapshot.py  test_llm_report_agent.py  test_llm_research_agent.py  test_multi_agent_evolution.py  test_paper_broker.py  test_preflight_validation.py  test_regime_agent.py  test_risk_engine.py  test_robot_report.py  test_signal_agent.py  test_strategy_evolution.py  test_strategy_research_run.py  test_trading_calendar.py
(+64 files in other folders)
