[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-a-share"
version = "0.1.0"
description = "A-share low-frequency quant trading MVP with paper execution and deterministic risk gates."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.16.0",
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
quant-health-check = "quant_system.monitoring.health:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
